--- a/app/views/assessments/quiz_design.html.erb
+++ b/app/views/assessments/quiz_design.html.erb
@@ -8,8 +8,8 @@
        <% qtn_type = Puzzle.where(assessments_id: assessment.id)%>
       <% qtn_type.each do |t|%>
        <div class="ques-div">
-              <a href="/edit_page/<%=t.id%>" style="color:#2c4c3c;margin-left:90%;padding-right:2%;margin-top:10%;"><i class="fa-solid fa-pen"></i></a>
-           <a href="/delete/<%=t.id%>" style="color:#2c4c3c;"><i class="fa-solid fa-trash"></i></a>
+              <a href="/edit_page/<%=t.id%>" style="color:#2c4c3c;margin-left:90%;padding-right:2%;margin-top:10%;"><em class="fa-solid fa-pen"></em></a>
+           <a href="/delete/<%=t.id%>" style="color:#2c4c3c;"><em class="fa-solid fa-trash"></em></a>
           <h2 style="padding:5%;color:#2c4c3c;text-align:center;"><%= t.question%></h2>
 
        </div>
