--- a/app/assets/stylesheets/quiz_design.scss
+++ b/app/assets/stylesheets/quiz_design.scss
@@ -41,10 +41,10 @@
         color:white;
         margin-left: 35%;
     }
-    #scroller-div .question-header h1{
-        color:white;
-        font-size: 30px;
-    }
+    // #scroller-div .question-header h1{
+    //     color:white;
+    //     font-size: 30px;
+    // }
 
     #scroller-div .scroll-questions {
         padding: 5%;
@@ -273,7 +273,6 @@
     //     text-indent: 20px;
     //     padding: 10px 10px;
     //     width: 20%;
-    //     height: 5%;
     //     font-size: 1.5rem;
     //     text-align: center;
     //     margin-left: 80%;
