--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -3,7 +3,7 @@
 <% logged_user = User.find(session[:id])%>
 
 
-<nav class="navbar navbar-expand-lg navbar-light ">
+<nav class="navbar navbar-expand-lg navbar-light " aria-labelledby="open">
 <%= image_tag("pf_logo.png", alt: "like" ,  class: "pf_logo") %>
   <div class="container-fluid">
 
@@ -66,7 +66,7 @@
 </nav>
 <%else %>
 
-<nav class="navbar navbar-expand-lg navbar-light ">
+<nav class="navbar navbar-expand-lg navbar-light " aria-labelledby="open">
 <%= image_tag("pf_logo.png", alt: "like" ,  class: "pf_logo") %>
    <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!-- Navbar brand -->
