--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>PuzzleFest</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="pf_logo.png" style="background: none">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
