--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -33,13 +33,13 @@
             </button>
         </div>
         <div class="text-right">
-            <a href="forgot_pwd" class="forget-link" style="color:#ff574e">
+            <a href="forgot_pwd" class="forget-link" style="color:#5c7859">
                 Forgot Password?
             </a>
         </div>
         <div class="mb-2" style="color:black">
             Always have an account
-            <a href="login" class="register-link" style="color:#ff574e">
+            <a href="/login" class="register-link" style="color:#5c7859">
 Login
             </a>
             <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
