--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -147,7 +147,7 @@
                             padding: 10px 10px;
                             width: 200px;
                             background: transparent;
-                            color: #2c4c3c;
+                            color: white;
                             font-weight: bold;
                             border-radius: 5px;
                             background-color: #2c4c3c;
