--- a/app/assets/stylesheets/quiz_design.scss
+++ b/app/assets/stylesheets/quiz_design.scss
@@ -295,7 +295,16 @@
         padding-bottom: 2%;
         min-width: 40px;
     }
-
+   .display-qtn {
+    background-color: #88c681;
+    margin-bottom: 10px;
+    height: 150px;
+    width: 100%;
+    text-align:left;
+    padding: 30px 30px;
+    border-radius: 30px;
+    font-size: 30px;
+   }
     #timer-input {
         background-color: #88c681;
         font-weight: bold;
@@ -342,12 +351,13 @@
     height: 30%;
 }
 .explore {
-    background-color:rgb(227, 255, 223) ;
-    height: 700px;
+//    background-color:rgb(227, 255, 223) ;
+    height: 600px;
     width: 40%;
     margin-left: 35%;
     margin-top: 5%;
     border-radius: 50%;
+    padding-top: 10%;
 
 }
 .explore #create {
@@ -453,4 +463,28 @@
     width:80%;
     padding:2%;
     color:#104930;
+}
+.library-scroll.scroll{
+   margin:4px, 4px;
+   padding:4px;
+   width: 500px;
+    height: 110px;
+                overflow-x: hidden;
+                overflow-y: auto;
+                text-align:justify;
+                margin-top: 100px;
+}
+.library button{
+    padding: 10px 10px;
+    width: 200px;
+    // margin-top: -50%;
+    border: none;
+    outline:none;
+    border-radius: 10px;
+    margin-left: 85%;
+    // margin-top: 50px;
+    background-color: #21502f;
+    color:white;
+    font-weight: bold;
+    margin-bottom: 100px;
 }
