--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <%= favicon_link_tag asset_path('pf_logo.png'), {class: 'favicon'}%>
     <title>PuzzleFest</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="pf_logo.png" style="background: none">
