--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -22,13 +22,13 @@
             </button>
         </div>
         <div class="text-right">
-            <a href="forgot_pwd" class="forget-link" style="color:#ff574e">
+            <a href="forgot_pwd" class="forget-link" style="color:#5c7859">
                 Forgot Password?
             </a>
         </div>
             <div class="mb-2" style="color:black">
                 Don't have an account?
-                <a href="index" class="register-link" style="color:#ff574e">
+                <a href="/register" class="register-link" style="color:#5c7859">
                     Signup
                 </a>
             </div>
