--- a/app/assets/stylesheets/quiz_design.scss
+++ b/app/assets/stylesheets/quiz_design.scss
@@ -315,7 +315,7 @@
         text-indent: 20px;
         padding: 10px 10px;
         width: 30%;
-        height: 5%;
+        // height: 5%;
         font-size: 1.5rem;
         text-align: center;
         margin-left: 70%;
@@ -385,6 +385,11 @@
     margin-left: 25%;
     margin-top: 5%;
 }
+.assessments {
+    margin-left: 25%;
+    margin-top: 5%;
+    display:flex;
+}
 #redirect-btn {
     position: absolute;
     width: 10%;
@@ -408,12 +413,12 @@
     border-radius: 20px;
     // text-align: center;
 }
-.library .library-img {
-     margin-left:5%;
-    width: 200px;
-    height: 200px;
+// .library .library-img {
+//      margin-left:5%;
+//     width: 200px;
+//     height: 200px;
 
-}
+// }
 .library-texts {
     // display:inline-flex;
     text-align: right;
@@ -433,6 +438,9 @@
     margin-top: -40px;
     margin-left: 10px;
 }
+.librar-content{
+    display:flex;
+}
 .library-content .quiz-start {
     padding: 10px 10px;
     // margin-top: -50%;
@@ -443,6 +451,7 @@
     background-color: #21502f;
     color:white;
     font-weight: bold;
+
 
 
 }
