--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -80,7 +80,7 @@ body {
 }
 
 .form-box button[type="submit"]:hover {
-    background: #21502f
+    background: #21502f;
 }
 
 // .custom-control-label {
