--- a/app/views/users/forgot_pwd.html.erb
+++ b/app/views/users/forgot_pwd.html.erb
@@ -15,7 +15,7 @@
 
             <div class="mb-2" style="color:black">
                 Back to
-                <a href="login" class="register-link" style="color:#ff574e">
+                <a href="login" class="register-link" style="color:#21502f">
                     Login
                 </a>
             </div>
