--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -6,11 +6,13 @@
 
     display: flex;
 }
-.reports_page .charts {
-    height: 400px;
-    width: 600px;
-    margin-top: 5%;
+.reports_page .chart {
+    height: 500px;
+    width: 100%;
+    padding-top: 5%;
+    padding-left: 15%;
 }
+
 .reports_page{
     margin-top: 5%;
 }
@@ -19,9 +21,24 @@
     background: green;
 }
 .reports_table {
-    width: 60%;
-    margin-top: 5%;
+    width: 70%;
+    margin-top: 1%;
     margin-left: 25%;
 
 }
 
+.reports_table th{
+    font-size: 25px;
+    // font-family: 'DynaPuff', cursive;
+    color:rgb(27, 63, 27);
+}
+.reports_table tbody td{
+    font-size: 20px;
+    // font-family: 'DynaPuff', cursive;
+    color:rgb(43, 92, 43);
+}
+.reports_table tbody a{
+    font-size: 25px;
+    // font-family: 'DynaPuff', cursive;
+    color:rgb(43, 92, 43);
+}
