--- a/app/views/assessments/library.html.erb
+++ b/app/views/assessments/library.html.erb
@@ -30,18 +30,19 @@
  <div class="library-content">
     <div class="library-img">
    <% if t.images%>
-   <%= image_tag(t.images , class:"library-img" , height:"100" , width:"100")%>
+   <%= image_tag(t.images , class:"library-img" )%>
    <%else%>
    <%= image_tag t.images,  class:"library-img"%>
    <%end%>
    </div>  <br>
    <div class="library-texts">
       <a href = "display/<%=t.id%>"><p class="head"><%= t.name%></p></a><br>
-    <p class="count"><%=Puzzle.where(assessments_id: t.id).count%></p>
-    <a href="/display_pin/<%=t.id%>"><button type="submit" class="quiz-start"> Start</button></a>
-   </div>
-</div>
+    <p class="count">number of questions:<%=Puzzle.where(assessments_id: t.id).count%></p>
+   </div><br>
 
+    <a href="/display_pin/<%=t.id%>"><button type="submit" class="quiz-start"> Start</button></a>
+
+</div>
 
 <%end%>
 <%end%>
@@ -52,3 +53,8 @@
 {
     window.location.href="/red_library"
 }    </script>
+<style>
+    .lib_color{
+        background-color:white;
+    }
+</style>
