--- a/app/views/assessments/quiz_design.html.erb
+++ b/app/views/assessments/quiz_design.html.erb
@@ -1,11 +1,11 @@
 <div class="container-fluid quiz_main_div" id="quiz-page">
 <div class="row" id="quiz-row-div">
 <div class="col-4" id="scroller-div">
-<% assessment= Assessment.last%>
-     <div class="question-header"><h1> Assessment title : <%=assessment.name%></h1><br><h3>Questions</h3></div>
+    <%$test.each do |test|%>
+     <div class="question-header"><h1> Assessment title : <%=test.name%></h1><br><h3>Questions</h3></div>
      <div class="scroll-questions">
 
-       <% qtn_type = Puzzle.where(assessments_id: assessment.id)%>
+       <% qtn_type = Puzzle.where(assessments_id: test.id )%>
       <% qtn_type.each do |t|%>
        <div class="ques-div">
               <a href="/edit_page/<%=t.id%>" style="color:#2c4c3c;margin-left:90%;padding-right:2%;margin-top:10%;"><em class="fa-solid fa-pen"></em></a>
@@ -14,6 +14,8 @@
 
        </div>
      <%end%>
+     <%end%>
+
 
      <div class="add_qtn">
         <button type="submit" id="add_question" onclick="display()">Add question</button>
