--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -5,7 +5,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light " aria-labelledby="open">
 <%= image_tag("pf_logo.png", alt: "like" ,  class: "pf_logo") %>
-  <div class="container-fluid">
+  <div class="container-fluid lib_color">
 
 
     <!-- Collapsible wrapper -->
