--- a/app/assets/stylesheets/quiz_design.scss
+++ b/app/assets/stylesheets/quiz_design.scss
@@ -351,13 +351,13 @@
     height: 30%;
 }
 .explore {
-//    background-color:rgb(227, 255, 223) ;
-    height: 600px;
+   background-color:rgba(227, 255, 223, 0.648) ;
+    height: 800px;
     width: 40%;
     margin-left: 35%;
     margin-top: 5%;
     border-radius: 50%;
-    padding-top: 10%;
+padding-top:5%;
 
 }
 .explore #create {
