--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,6 @@
-
+<div class="about-content">
 <%= render partial:"header"%>
+</div>
 <div class="row about-div">
   <div class="col-6 about-pics-div">
      <div class="cir-1"><%= image_tag("takingquiz.png", alt: "like" , class:"about-pic") %></div>
@@ -36,3 +37,8 @@
 
 </footer>
 <!-- Footer -->
+<style>
+  .about-content .navbar{
+    color:green !important;
+  }
+  </style>
