--- a/app/views/assessments/_quiz_template.html.erb
+++ b/app/views/assessments/_quiz_template.html.erb
@@ -48,29 +48,27 @@
 <div class="col-7" id="question_div">
         <div class="sec-div">
   <em class="fa-solid fa-stopwatch" id="timer"></em>
-  <input type="number" placeholder="Seconds" name="time" id="timer-input">
+  <input type="number" placeholder="Seconds" name="time" id="timer-input" >
 </div>
         <div class="question_type_area">
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-
            <div class="ques-icon-div" onclick="uploadPic()"><em class="fa-solid fa-image" id="img-icon"></em>
-            <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...." required></textarea></div>
-           <div  id="f-upload" class="display" style="display: none;"><input type="file" name="images"></div>
-        </div>
            </div>
-
+           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."required></textarea></div>
+           <div  id="f-upload" class="display" style="display:none"><input type="file" name="images"></div>
+        </div>
         <div class="answer-type-area">
         <div class="disp_opts">
           <div class="quiz_row">
 
-           <div class="disp opt1"><input type="radio" name="option" value="a" required><input type="text" name="option1"  placeholder="Add answer 1" required></div>
-           <div class="disp opt2"><input type="radio" name="option" value="b" required><input type="text" name="option2" placeholder="Add answer 2" required></div>
+           <div class="disp opt1"><input type="radio" name="option"  required><input type="text" name="option1"  placeholder="Add answer 1"required></div>
+           <div class="disp opt2"><input type="radio" name="option" required><input type="text" name="option2"  placeholder="Add answer 2"required></div>
           </div>
         </div>
         <div class="quiz_row">
         <div class="disp opt3">
-        <input type="radio" name="option" value="c" required>
-        <input type="text" name="option3" placeholder="Add answer 3" required>
+        <input type="radio" name="option" required>
+        <input type="text" name="option3" placeholder="Add answer 3"required>
         </div>
 
         <div class="disp opt4">
