--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -4,16 +4,15 @@
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
         <div class="form-input">
             <span><em class="fa fa-envelope-o"></em></span>
-            <input type="email" name="email" placeholder="Mail Address" tabindex="10" required>
+            <input type="email" name="email" placeholder="Mail Address" pattern="[a-z0-9._-]+@[a-z0-9._-]+\.[a-z]{2,}$"tabindex="10" required>
         </div>
         <div class="form-input">
             <span><em class="fa-solid fa-key"></em></span>
-            <input type="password" name="password" placeholder="Password" required>
+            <input type="password" name="password" id="pwd" pattern="[A-Za-z0-9]{5,12}" title="Password should contain upcase , downcase letters and numbers"placeholder="Password" required>
         </div>
         <div class="mb-3">
-            <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="cb1" name="">
-                <label class="custom-control-label" for="cb1">Show password</label>
+             <div class="custom-control custom-checkbox">
+                <input type="checkbox"  id="check" onchange="toggle()" name=""><p>Show password</p>
             </div>
         </div>
         <div class="mb-3">
@@ -38,4 +37,27 @@
 <%=image_tag( "login_bg.webp", alt: "like", class:"login_image" ) %>
 </div>
 </div>
+<style>
+    .custom-checkbox {
+        display:flex;
+    }
+    .custom-checkbox p {
+        margin-left: 20px;
+        margin-top: 20px;
+
+    }
+    </style>
+<script>
+    function toggle() {
+    let pwd = document.getElementById("pwd");
+
+    let box= document.getElementById("check");
+
+    if (box.checked) {
+        document.getElementById("pwd").type = "text";
+    } else {
+        document.getElementById("pwd").type = "password";
+    }
+}
+    </script>
 
