--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -3,7 +3,11 @@
         <div class="heading">
             <%= image_tag("pf.png", alt: "like" ,:align=>"middle") %>
                 <h2>A FULLY ONLINE BASED ASSESSMENT APPLICATION <br>TO ASSEST YOURSELF</h2>
+                <% if session[:id]%>
                 <button type="button" class="btn btn-primary me-3" id="log" onclick="redirect_login()">GET STARTED</button>
+                <%else%>
+                <button type="button" class="btn btn-primary me-3" id="log" onclick="redirect_pin()">GET STARTED</button>
+                <%end%>
         </div>
 </div>
 </div>
@@ -44,7 +48,10 @@
                             }
 
                             function redirect_login() {
-                                window.location.href = "/users/login";
+                                window.location.href = "/login";
+                            }
+                            function redirect_pin() {
+                                window.location.href="/pin";
                             }
                         </script>
                     </div>
