--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,8 +1,6 @@
 
 <% if session[:id]%>
 <% logged_user = User.find(session[:id])%>
-
-
 <nav class="navbar navbar-expand-lg navbar-light " aria-labelledby="open">
 <%= image_tag("pf_logo.png", alt: "like" ,  class: "pf_logo") %>
   <div class="container-fluid lib_color">
@@ -25,7 +23,7 @@
           </a>
           <ul class="dropdown">
             <li>
-              <a href="">Name</a>
+              <a href=""><%=logged_user["name"]%></a>
             </li>
             <li>
               <a href="">Logout</a>
