--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -6,7 +6,7 @@
                 <% if session[:id]%>
                 <button type="button" class="btn btn-primary me-3" id="log" onclick="redirect_login()">GET STARTED</button>
                 <%else%>
-                <button type="button" class="btn btn-primary me-3" id="log" onclick="redirect_pin()">GET STARTED</button>
+                <button type="button" class="btn btn-primary me-3" id="log" onclick="redirect_pin()">ENTER PIN</button>
                 <%end%>
         </div>
 </div>
