--- a/app/views/assessments/dashboard.html.erb
+++ b/app/views/assessments/dashboard.html.erb
@@ -2,7 +2,7 @@
 <%= render partial:"/home/header"%>
 </div>
 <div class="sidebar">
-<div><em class="fa-solid fa-earth-americas" id="sidebar-icon"></em><a href="/game">Explore</a></div>
+<div><em class="fa-solid fa-earth-americas" id="sidebar-icon"></em><a href="/quiz">Explore</a></div>
 <div><em class="fa-solid fa-book" id="sidebar-icon"></em><a href="/library">Library</a></div>
 <div><em class="fa-solid fa-chart-line" id="sidebar-icon"></em><a href="#">Dashboard</a></div>
 </div>
