--- a/app/views/assessments/_tf_design.html.erb
+++ b/app/views/assessments/_tf_design.html.erb
@@ -39,13 +39,13 @@
 
 <form action="/question" method="post" enctype="multipart/form-data">
 <div class="col-7" id="question_div">
+  <%= @quiz%>
         <div class="sec-div">
   <em class="fa-solid fa-stopwatch" id="timer"></em>
   <input type="number" placeholder="Seconds" name="time" id="timer-input">
 </div>
         <div class="question_type_area">
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-
            <div class="ques-icon-div" onclick="uploadPic()"><em class="fa-solid fa-image" id="img-icon"></em>
            </div>
            <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."required></textarea></div>
